# ForkLore

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  dev.sh  docker-compose.yml  opencode.json
backend/: -  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  build.gradle  gradle.properties  pyproject.toml  requirements.txt  settings.gradle  test_output.txt
backend/apps/ai/: __init__.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/ai/migrations/: 0001_initial.py  0002_initial.py  0003_allow_null_embedding.py
backend/apps/ai/tests/: test_services.py  test_views.py
backend/apps/contents/: AGENTS.md  __init__.py  apps.py  map_services.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/contents/migrations/: 0001_initial.py  0002_initial.py  (+3 more)
backend/apps/core/: urls.py  views.py
backend/apps/interactions/: AGENTS.md  __init__.py  apps.py  constants.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/novels/: AGENTS.md  __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/users/: apps.py  models.py  serializers.py  services.py  views.py
backend/common/: exceptions.py  models.py  pagination.py  permissions.py  renderers.py
backend/common/tests/: test_cors.py  test_renderers.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  e2e.py  local.py  production.py  test.py
backend/tests/: conftest.py
backend/tests/e2e/: test_response_format.py
(+515 files in other folders)
